--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -16,9 +16,9 @@
         mat-icon-button
         (click)="drawer.toggle()"
         *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        <mat-icon aria-label="Side nav toggle icon">Menu</mat-icon>
       </button>
-      <span>demo</span>
+      <span>SPA Honeypot package Demo</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
