--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -5,7 +5,7 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="form">Form</a>
+      <a mat-list-item routerLink="contact-form">Contact Form</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
