--- a/projects/demo/src/app/contact-form/contact-form.component.scss
+++ b/projects/demo/src/app/contact-form/contact-form.component.scss
@@ -1,15 +1,10 @@
+:host {
+  display: block;
+  padding: 20px 16px;
+}
+
 .full-width {
   width: 100%;
-}
-
-.shipping-card {
-  min-width: 120px;
-  margin: 20px auto;
-}
-
-.mat-radio-button {
-  display: block;
-  margin: 5px 0;
 }
 
 .row {
