--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -21,7 +21,7 @@
         mat-icon-button
         (click)="drawer.toggle()"
         *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">Menu</mat-icon>
+        <mat-icon aria-hidden="false" aria-label="Side nav toggle icon" fontIcon="menu"></mat-icon>
       </button>
       <span>{{ title$ | async }}</span>
     </mat-toolbar>
