Add GraphQL toggle

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -12,6 +12,7 @@
         Template Driven Form
       </a>
     </mat-nav-list>
+    <mat-slide-toggle class="graphql-toggle" [(ngModel)]="graphQLMode">GraphQL Mode</mat-slide-toggle>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
