--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -12,7 +12,13 @@
         Template Driven Form
       </a>
     </mat-nav-list>
-    <mat-slide-toggle class="graphql-toggle" [(ngModel)]="graphQLMode">GraphQL Mode</mat-slide-toggle>
+    <mat-slide-toggle
+      class="graphql-toggle"
+      [ngModel]="graphQLMode.active$ | async"
+      (ngModelChange)="graphQLMode.toggle()"
+    >
+      GraphQL Mode
+    </mat-slide-toggle>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
