Use different action in GraphQL mode

--- a/projects/demo/src/app/reactive-form/reactive-form.component.html
+++ b/projects/demo/src/app/reactive-form/reactive-form.component.html
@@ -1,5 +1,5 @@
 <form
-  action="https://api.domain.tld/api/endpoint"
+  [action]="action$ | async"
   novalidate
   #form
   [formGroup]="contactForm"
